--- a/index.html
+++ b/index.html
@@ -8,122 +8,115 @@
     <title>Cinema SF</title>
   </head>
 
-    <body>
-      <header class="main__header">
-        <!-- Inicio de Menu de navegacion -->
-        <nav class="main__header__nav">
-          <ul class="main__header__ul">
-            <li>
-              <a href="./index.html">Inicio</a>
-            </li>
-            <li>
-              <a href="./cartelera.html">Cartelera</a>
-            </li>
-            <li>
-              <a href="./servicios.html">Servicios</a>
-            </li>
-            <li>
-              <a href="./nosotros.html">Nosotros</a>
-            </li>
-            <li>
-              <a href="./contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </nav>
-        <!-- Fin de Menu de navegacion -->
-      </header>
-      <!-- Inicio de contenido principal -->
-      <main>
-        <div class="titulo__estrenos">
+  <body class="body__grid">
+    <main>
+      <nav class="main__header__nav">
+        <ul class="main__header__ul">
+          <li>
+            <a href="./index.html">Inicio</a>
+          </li>
+          <li>
+            <a href="./cartelera.html">Cartelera</a>
+          </li>
+          <li>
+            <a href="./servicios.html">Servicios</a>
+          </li>
+          <li>
+            <a href="./nosotros.html">Nosotros</a>
+          </li>
+          <li>
+            <a href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="section__estrenos">
+        <div class="titulo__estrenos tituloestrenos">
           <h1>Estrenos</h1>
         </div>
-        <section class="section__estrenos">
-          <br />
-          <div class="div__nope">
-            <img
-              src="./img/Nope.png"
-              alt="Poster pelicula NOPE"
-              width="300"
-              height="300"
-            />
-            <h2>Nope/Nop</h2>
-            <p class="text__nope">
-              En la estela del éxito de Déjame salir y de Nosotros, dos
-              películas que sacudieron y redefinieron el género de terror,
-              Jordan Peele quería ampliar su lienzo cinematográfico y, de paso,
-              enfrentarse a un nuevo reto en su carrera de cineasta: la película
-              del verano. “NOP es la historia de mayor envergadura que he
-              contado hasta ahora”, dice el director. “Desde un punto de vista
-              meramente cinematográfico, todo el proceso ha sido una auténtica
-              aventura. Todos los departamentos se han arriesgado y entregado al
-              máximo. Empecé a escribir un guion para una película sin saber si
-              conseguiría rodarla. Luego reuní a un equipo para que me ayudara a
-              sacarla adelante”.
-            </p>
-          </div>
-          <div class="div__spiderman">
-            <img
-              src="./img/spiderman.jpg"
-              alt="poster spiderman no way home"
-              width="300"
-              height="300"
-            />
-            <h2>Spiderman No Way Home</h2>
-            <p class="text__spiderman">
-              Por primera vez en la historia cinematográfica de Spider-Man,
-              nuestro héroe, vecino y amigo es desenmascarado, y por tanto, ya
-              no es capaz de separar su vida normal de los enormes riesgos que
-              conlleva ser un superhéroe. Cuando pide ayuda al Doctor Strange,
-              los riesgos pasan a ser aún más peligrosos, obligándole a
-              descubrir lo que realmente significa ser él. Secuela de
-              'Spider-Man: Far From Home'.
-            </p>
-          </div>
-          <br />
-        </section>
-      </main>
-      <!-- Fin de contenido principal -->
-      <!-- Inicio de Servicios -->
-      <div class="main__servicios">
-        <h2>Servicios</h2>
-      </div>
-      <p class="texto__servicios">
-        Descripcion de los servicios que se ofrecen en el cine:
         <br />
-        <br />
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, earum a
-        officia amet harum labore sunt quae aut libero perspiciatis deleniti
-        cupiditate odit delectus architecto nostrum cumque asperiores
-        consequuntur temporibus, voluptatum repellat blanditiis qui. Ipsa
-        corrupti illum voluptatum, voluptatem ea sequi necessitatibus! Neque
-        odit saepe repellendus praesentium quaerat deserunt quibusdam! Lorem
-        ipsum dolor sit amet consectetur, adipisicing elit. Eaque voluptas
-        ducimus atque quod tempore quam animi dignissimos porro dolorum
-        repellendus in facilis neque pariatur explicabo doloribus at culpa,
-        velit, aliquid corrupti, modi saepe! Amet possimus voluptate explicabo.
-        Omnis laboriosam sapiente quisquam quidem eius provident perferendis
-        vero, autem itaque quod tempore. Lorem ipsum dolor sit amet consectetur,
-        adipisicing elit. Eaque voluptas ducimus atque quod tempore quam animi
-        dignissimos porro dolorum repellendus in facilis neque pariatur
-        explicabo doloribus at culpa, velit, aliquid corrupti, modi saepe! Amet
-        possimus voluptate explicabo. Omnis laboriosam sapiente quisquam quidem
-        eius provident perferendis vero, autem itaque quod tempore.
-      </p>
-      <!-- Fin de Servicios -->
-      <!-- Inicio de Footer -->
-      <footer class="main__footer">
-        <div class="img__footer">
-          <p>
-            Aqui va el contacto y las redes sociales: Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Provident rerum assumenda modi beatae,
-            minima suscipit nisi magni facilis error similique praesentium
-            repellendus ipsam quas accusamus. Laboriosam earum assumenda
-            mollitia. Rem facilis, beatae cumque alias minus blanditiis
-            doloremque cupiditate sit dicta?
+        <div class="div__nope">
+          <img
+            src="./img/Nope.png"
+            alt="Poster pelicula NOPE"
+            width="300"
+            height="300"
+          />
+          <h2>Nope/Nop</h2>
+          <p class="text__nope">
+            En la estela del éxito de Déjame salir y de Nosotros, dos películas
+            que sacudieron y redefinieron el género de terror, Jordan Peele
+            quería ampliar su lienzo cinematográfico y, de paso, enfrentarse a
+            un nuevo reto en su carrera de cineasta: la película del verano.
+            “NOP es la historia de mayor envergadura que he contado hasta
+            ahora”, dice el director. “Desde un punto de vista meramente
+            cinematográfico, todo el proceso ha sido una auténtica aventura.
+            Todos los departamentos se han arriesgado y entregado al máximo.
+            Empecé a escribir un guion para una película sin saber si
+            conseguiría rodarla. Luego reuní a un equipo para que me ayudara a
+            sacarla adelante”.
           </p>
-          <img src="./img/CINEMASFLOGO1.png" alt="Logo de la pagina" />
         </div>
-      </footer>
-      <!-- Fin de Footer -->
-    </body>
+        <div class="div__spiderman">
+          <img
+            src="./img/spiderman.jpg"
+            alt="poster spiderman no way home"
+            width="300"
+            height="300"
+          />
+          <h2>Spiderman No Way Home</h2>
+          <p class="text__spiderman">
+            Por primera vez en la historia cinematográfica de Spider-Man,
+            nuestro héroe, vecino y amigo es desenmascarado, y por tanto, ya no
+            es capaz de separar su vida normal de los enormes riesgos que
+            conlleva ser un superhéroe. Cuando pide ayuda al Doctor Strange, los
+            riesgos pasan a ser aún más peligrosos, obligándole a descubrir lo
+            que realmente significa ser él. Secuela de 'Spider-Man: Far From
+            Home'.
+          </p>
+        </div>
+      </section>
+      <section class="section__publiservicios">
+        <div class="div__publicidad">
+          <h2>Publicidad</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique
+            a debitis repellendus, nostrum atque culpa, magni repudiandae
+            molestiae voluptatum, voluptate maiores voluptatibus fuga temporibus
+            ratione quia ducimus consequatur corrupti eos.
+          </p>
+        </div>
+        <div class="div__servicios">
+          <h2>Servicios</h2>
+          <p class="texto__servicios">
+            Descripcion de los servicios que se ofrecen en el cine:
+            <br />
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, earum
+            a officia amet harum labore sunt quae aut libero perspiciatis
+            deleniti cupiditate odit delectus architecto nostrum cumque
+            asperiores consequuntur temporibus, voluptatum repellat blanditiis
+            qui. Ipsa corrupti illum voluptatum, voluptatem ea sequi
+            necessitatibus! Neque odit saepe repellendus praesentium quaerat
+            deserunt quibusdam! Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Eaque voluptas ducimus atque quod tempore quam
+            animi dignissimos porro dolorum repellendus in facilis neque
+            pariatur explicabo doloribus at culpa, velit, aliquid corrupti, modi
+            saepe! Amet possimus voluptate explicabo. Omnis laboriosam sapiente
+            quisquam quidem eius provident perferendis vero, autem itaque quod
+            tempore. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Eaque voluptas ducimus atque quod tempore quam animi dignissimos
+            porro dolorum repellendus in facilis neque pariatur explicabo
+            doloribus at culpa, velit, aliquid corrupti, modi saepe! Amet
+            possimus voluptate explicabo. Omnis laboriosam sapiente quisquam
+            quidem eius provident perferendis vero, autem itaque quod tempore.
+          </p>
+        </div>
+      </section>
+      <br />
+    </main>
+  </body>
+  <!-- Fin de Servicios -->
+  <!-- Inicio de Footer -->
+
+  <!-- Fin de Footer -->
 </html>
