inclusion de bootstrap

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cinema SF</title>
   </head>
 
-  <body class="body__grid">
-    <main>
+  <body>
+    <main class="main__grid">
       <nav class="main__header__nav">
         <ul class="main__header__ul">
           <li>
@@ -29,6 +36,7 @@
           </li>
         </ul>
       </nav>
+
       <section class="section__estrenos">
         <div class="titulo__estrenos tituloestrenos">
           <h1>Estrenos</h1>
@@ -115,8 +123,17 @@
       <br />
     </main>
   </body>
-  <!-- Fin de Servicios -->
-  <!-- Inicio de Footer -->
-
-  <!-- Fin de Footer -->
+  <footer class="main__footer">
+    <div class="img__footer">
+      <p>
+        Aqui va el contacto y las redes sociales: Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Provident rerum assumenda modi beatae,
+        minima suscipit nisi magni facilis error similique praesentium
+        repellendus ipsam quas accusamus. Laboriosam earum assumenda mollitia.
+        Rem facilis, beatae cumque alias minus blanditiis doloremque cupiditate
+        sit dicta?
+      </p>
+      <img src="./img/CINEMASFLOGO1.png" alt="Logo de la pagina" />
+    </div>
+  </footer>
 </html>
